# Pure-Pursuit-Vehicle-on-Digital-Twin

./: README.md
Pure_Pursuit/include/: arc_length_spline.h  cubic_spline.h  pure_pursuit.h  track.h
Pure_Pursuit/routes/: midInside.json  my_path.json
Pure_Pursuit/src/: cubic_spline.cpp  pure_pursuit.cpp  track.cpp
src/: README.md
src/Pure_Pursuit/: CMakeLists.txt  package.xml
src/Pure_Pursuit/include/: pure_pursuit.h
src/Pure_Pursuit/params/: config.yaml
src/Pure_Pursuit/routes/: Big.json  student.json  student_big.json
src/Pure_Pursuit/src/: arc_length_spline.cpp  pure_pursuit.bak  pure_pursuit.cpp  pure_pursuit_node.cpp
src/comm_hub/: CMakeLists.txt  package.xml
src/comm_hub/include/: comm_hub.h  myMsg.h  myUdp.h
src/comm_hub/launch/: start.launch
src/comm_hub/params/: config.yaml
src/comm_hub/src/: comm_hub.cpp  comm_hub_node.cpp  myMsg.cpp  myUdp.cpp
src/serial_ros/: CMakeLists.txt  package.xml
src/serial_ros/include/: serial_ros.h
src/serial_ros/msg/: PoseMsgs.msg
src/serial_ros/src/: serial_ros.cpp  serial_ros_node.cpp
src/turn_on_qiansheng_robot/: CMakeLists.txt  package.xml
src/turn_on_qiansheng_robot/include/: Quaternion_Solution.h  qiansheng_robot.h
src/turn_on_qiansheng_robot/src/: Quaternion_Solution.cpp  qiansheng_robot.cpp
