<?xml version="1.0"?>
<package format="2">
  <name>pure_pursuit</name>
  <version>0.0.0</version>
  <description>The pure_pursuit package</description>


  <maintainer email="marong23@mail2.sysu.edu.cn">mr</maintainer>


  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>message_runtime</build_depend>
  <build_depend>smart_car_mc110</build_depend>
  <build_depend>serial_ros</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>message_generation</build_export_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <build_export_depend>serial_ros</build_export_depend>


  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_generation</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>smart_car_mc110</exec_depend>
  <exec_depend>serial_ros</exec_depend>



</package>
